network.yaml
# how to write network policy in kubernetes
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: deny-all-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-frontend-to-backend
#   namespace: default
# spec:
#   podSelector:
#     matchLabels:
#       app: backend-app
#   ingress:
#     - from:
#         - podSelector:
#             matchLabels:
#               app: frontend-app
#   policyTypes:
#     - Ingress
